--- a/.github/workflows/html.yml
+++ b/.github/workflows/html.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Install HTMLHint
         run: npm install htmlhint --save-dev
       - name: Run HTMLHint
-        run: npx htmlhint **/*.html
+        run: npx htmlhint *.html
