--- a/.github/workflows/pruebaOk.yml
+++ b/.github/workflows/pruebaOk.yml
@@ -9,8 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: microsoft/playwright-github-action@v1
-      - name: Install dependencies
+
+      - name: Install Node dependencies
         run: npm install
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
       - name: Run Playwright tests
         run: npx playwright test
