--- a/.github/workflows/brok.yml
+++ b/.github/workflows/brok.yml
@@ -1,13 +1,18 @@
-name: Broken Link Checker
+name: Check Broken Links
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  check-links:
+  link-check:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
-      - name: Install link checker
-        run: npm install -g broken-link-checker
-      - name: Run link checker
-        run: blc http://localhost:3000 --filter-level 3 --recursive
+
+      - name: Install lychee link checker
+        run: |
+          curl -Ls https://github.com/lycheeverse/lychee/releases/download/v0.13.0/lychee-v0.13.0-x86_64-unknown-linux-gnu.tar.gz | tar xz
+          ./lychee --version
+
+      - name: Check links in all HTML files
+        run: ./lychee "**/*.html" --verbose --no-progress
